--- a/Advanced CSS/index.html
+++ b/Advanced CSS/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>    
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/Advanced CSS/css/styles.css">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto:wght@100;300&family=Varela+Round&display=swap"
+    />
+    <link rel="stylesheet" href="/Advanced CSS/css/styles.css" />
     <title>Testimonial</title>
-</head>
-<body>
-    <header>
-        <div>Winc Academy! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi eaque. Dolor rem officia in sunt veritatis eaque impedit nihil quo adipisci, eius praesentium, aspernatur ipsum ab sint voluptatum quia.</div>
-    </header>
-    <main>
-        <div>
-            <img class="picca" src="/Advanced CSS/gfx/selfportrait2015.jpg">
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <div class="section">
+          Winc Academy! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Excepturi, sequi eaque. Dolor rem officia in sunt veritatis eaque
+          impedit nihil quo adipisci, eius praesentium, aspernatur ipsum ab sint
         </div>
-    </main>
-<footer>
-    <h1>Ravi Rambaran</h1>
-<div>ravirambaran.art</div>
-</footer>
-
-
-
-</body>
+      </header>
+      <main>
+        <div class="picca-div">
+          <img
+            class="picca"
+            src="/Advanced CSS/gfx/selfportrait2015.jpg"
+            width="100px"
+          />
+        </div>
+      </main>
+      <footer>
+        <h1>RAVI RAMBARAN</h1>
+        <div><a href="https://ravirambaran.art">ravirambaran.art</a></div>
+      </footer>
+    </div>
+  </body>
 </html>
