--- a/Advanced CSS/index.html
+++ b/Advanced CSS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,6 +11,7 @@
     <title>Testimonial</title>
   </head>
   <body>
+    <!-- testimonial -->
     <div class="wrapper">
       <header>
         <div class="section">
@@ -22,6 +23,7 @@
       <main>
         <div class="picca-div">
           <img
+            alt="testimonial picture"
             class="picca"
             src="/Advanced CSS/gfx/selfportrait2015.jpg"
             width="100px"
@@ -33,5 +35,33 @@
         <div><a href="https://ravirambaran.art">ravirambaran.art</a></div>
       </footer>
     </div>
+    <!-- portfolio grid -->
+    <div class="container flex">
+      <div><img src="/Advanced CSS/gfx/selfportrait2015.jpg" alt="" /></div>
+      <div>
+        <img
+          src="/Advanced CSS/gfx/final/2020-2022/illustration-spaceranger677.png"
+          alt=""
+        />
+      </div>
+      <div>
+        <img src="/Advanced CSS/gfx/sketch/sketching-1-2016.png" alt="" />
+      </div>
+      <div>
+        <img src="/Advanced CSS/gfx/sketch/sketching-2-2016.jpg" alt="" />
+      </div>
+      <div>
+        <img src="/Advanced CSS/gfx/sketch/sketching-2015.png" alt="" />
+      </div>
+      <div>
+        <img src="/Advanced CSS/gfx/sketch/sketching-2021.png" alt="" />
+      </div>
+    </div>
+    <!-- social media/animation -->
+    <div>blog</div>
+    <div>facebook</div>
+    <div>twitter</div>
+    <div>github</div>
+    <div>linkedin</div>
   </body>
 </html>
